# vpype-fractal

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: GALLERY.md
src/vpype_fractal/: __init__.py  presets.py
src/vpype_fractal/commands/: __init__.py  _shared.py  attractor_cmd.py  carpet.py  clifford.py  dejong.py  dragon.py  fern.py  gosper.py  hilbert.py  ifs_cmd.py  julia.py  koch.py  koch_island.py  levy.py  lorenz.py  lsystem_cmd.py  mandelbrot.py  minkowski.py  peano.py  sierpinski.py  sierpinski_triangle.py  tree.py
src/vpype_fractal/engines/: __init__.py  attractor.py  contour.py  escape_time.py  geometric.py  ifs.py  lsystem.py  paths.py  turtle.py
tests/: test_attractor.py  test_attractor_commands.py  test_commands.py  test_escape_time.py  test_geometric.py  test_ifs_engine.py  test_lsystem_engine.py  test_shared.py  test_turtle.py
